{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 38,
  "lineage": "865141b8-ddab-9d16-60c6-fb837ade78aa",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:779846794501:instance/i-08d872b277b28c87b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d872b277b28c87b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02fc11c1135011e86",
            "private_dns": "ip-10-0-1-242.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.242",
            "public_dns": "ec2-18-212-154-95.compute-1.amazonaws.com",
            "public_ip": "18.212.154.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04f37dbb5cab550b1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0125d77955bfd71f6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04755e5f2713d46e1",
            "tags": {
              "Name": "Servidores Para Despliege Automatizado"
            },
            "tags_all": {
              "Name": "Servidores Para Despliege Automatizado"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "1m"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0125d77955bfd71f6"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.ec2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:779846794501:instance/i-022ce597a471c0ff1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022ce597a471c0ff1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d19d4fd2c80e1ca2",
            "private_dns": "ip-10-0-1-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.101",
            "public_dns": "ec2-52-207-231-92.compute-1.amazonaws.com",
            "public_ip": "52.207.231.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04fe854b502817016",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0125d77955bfd71f6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04755e5f2713d46e1",
            "tags": {
              "Name": "Servidores Para Despliege Automatizado"
            },
            "tags_all": {
              "Name": "Servidores Para Despliege Automatizado"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "1m"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0125d77955bfd71f6"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.ec2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779846794501:security-group/sg-0125d77955bfd71f6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0125d77955bfd71f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250214015703733600000002",
            "name_prefix": "terraform-",
            "owner_id": "779846794501",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Grupo de Seguridad Proyecto"
            },
            "tags_all": {
              "Name": "Grupo de Seguridad Proyecto"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba3b6dc77b65e8c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09dd6ec3559f0dbc2",
            "arn": "arn:aws:ec2:us-east-1:779846794501:elastic-ip/eipalloc-09dd6ec3559f0dbc2",
            "association_id": "eipassoc-0ab074bd2de981c14",
            "domain": "vpc",
            "id": "eipalloc-09dd6ec3559f0dbc2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00efae07875f69c9f",
            "private_dns": "ip-10-0-1-57.ec2.internal",
            "private_ip": "10.0.1.57",
            "public_dns": "ec2-3-225-57-201.compute-1.amazonaws.com",
            "public_ip": "3.225.57.201",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Proyecto Terraform"
            },
            "tags_all": {
              "Name": "Proyecto Terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779846794501:internet-gateway/igw-023a318fb1ec96a48",
            "id": "igw-023a318fb1ec96a48",
            "owner_id": "779846794501",
            "tags": {
              "Name": "InternetGateway, Proyecto Terraform"
            },
            "tags_all": {
              "Name": "InternetGateway, Proyecto Terraform"
            },
            "vpc_id": "vpc-0ba3b6dc77b65e8c4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09dd6ec3559f0dbc2",
            "association_id": "eipassoc-0ab074bd2de981c14",
            "connectivity_type": "public",
            "id": "nat-0d0d41614afe755b4",
            "network_interface_id": "eni-00efae07875f69c9f",
            "private_ip": "10.0.1.57",
            "public_ip": "3.225.57.201",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04755e5f2713d46e1",
            "tags": {
              "Name": "Proyecto Terraform"
            },
            "tags_all": {
              "Name": "Proyecto Terraform"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779846794501:route-table/rtb-071dfa3bb93f61bf7",
            "id": "rtb-071dfa3bb93f61bf7",
            "owner_id": "779846794501",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023a318fb1ec96a48",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba3b6dc77b65e8c4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdb76121d727faad",
            "route_table_id": "rtb-071dfa3bb93f61bf7",
            "subnet_id": "subnet-04755e5f2713d46e1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c6bb9745d5497e9",
            "route_table_id": "rtb-071dfa3bb93f61bf7",
            "subnet_id": "subnet-012418ceaff2fed90"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779846794501:subnet/subnet-04755e5f2713d46e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04755e5f2713d46e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779846794501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subred Publica, Proyecto Terraform"
            },
            "tags_all": {
              "Name": "Subred Publica, Proyecto Terraform"
            },
            "vpc_id": "vpc-0ba3b6dc77b65e8c4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779846794501:subnet/subnet-012418ceaff2fed90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012418ceaff2fed90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779846794501",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subred Publica, Proyecto Terraform"
            },
            "tags_all": {
              "Name": "Subred Publica, Proyecto Terraform"
            },
            "vpc_id": "vpc-0ba3b6dc77b65e8c4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779846794501:vpc/vpc-0ba3b6dc77b65e8c4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09f83018a5d22e54e",
            "default_route_table_id": "rtb-020e3b109c4b9e6a2",
            "default_security_group_id": "sg-08fef5c9b0afb6161",
            "dhcp_options_id": "dopt-091e2a0e29f29d9c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba3b6dc77b65e8c4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020e3b109c4b9e6a2",
            "owner_id": "779846794501",
            "tags": {
              "Name": "Proyecto Terraform"
            },
            "tags_all": {
              "Name": "Proyecto Terraform"
            }
          }
        }
      ]
    }
  ]
}